--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="hover.css">
     <link rel="stylesheet" href="style.css">
     <title>Gif Search</title>
@@ -16,7 +18,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <img class = "logo" src="images/logo2.png">
+                <img class="logo" src="images/logo2.png">
             </div>
         </div>
         <div class="row">
@@ -30,7 +32,8 @@
                                 <input id="searchTerm" type="text" class="form-control mb-2" id="exampleInputEmail1"
                                     aria-describedby="emailHelp">
                                 <button id="search" type="submit" class="btn btn-primary">Search</button>
-                                <span><button  id="clear" type="submit" class="btn btn-primary">Clear Results</button></span>
+                                <span><button id="clear" type="submit" class="btn btn-primary">Clear
+                                        Results</button></span>
                             </div>
                         </form>
                     </div>
@@ -38,8 +41,16 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-12">
-                <div class="results">
+            <div id="room" class="col-md-12 result">
+                <div class="results"></div>
+            </div>
+            <div class="col-md-4">
+                <div class="favorites"></div>
+                <div class="card faves hide">
+                    <div class="card-img-top favoritesbar">Favorites
+                        <div class="card-body favoritegifs">
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -47,7 +58,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.bundle.min.js"></script>
     <script src="gif.js"></script>
 </body>
 
