--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div id="room" class="col-md-12 result">
                 <div class="results"></div>
             </div>
-            <div class="col-md-4">
+            <div id="favebox"class="col-md-4">
                 <div class="favorites"></div>
                 <div class="card faves hide">
                     <div class="card-img-top favoritesbar">Favorites
